--- a/css/main.css
+++ b/css/main.css
@@ -42,5 +42,5 @@ ul.posts li {
     list-style: none;
 }
 ul {
-  list-style-image: url('image.jpeg');
+  list-style-image: url('https://github.com/ShilpaJagadeeshappa/ShilpaJagadeeshappa.github.io/blob/master/image.jpg');
 }
