--- a/css/main.css
+++ b/css/main.css
@@ -24,8 +24,8 @@ h1 {
     font-family:'calibri;
 }
 p {
-    font-size: 0.5em;
-    line-height: 0.4em;
+    font-size: 12px;
+    line-height: 15px;
     color: #333;
 }
 footer {
