--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 1em;
+    font-size: 15px;
     font-family:'calibri;
 }
 p {
@@ -30,12 +30,12 @@ p {
 }
 footer {
     border-top: 1px solid #d5d5d5;
-    font-size: .5em;
+    
 }
 
 ul.posts { 
     margin: 20px auto 40px; 
-    font-size: 0.5em;
+   
 }
 
 ul.posts li {
