--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 32px;
+    font-size: 0.5em;
     font-family:'calibri;
 }
 p {
