--- a/css/main.css
+++ b/css/main.css
@@ -30,12 +30,12 @@ p {
 }
 footer {
     border-top: 1px solid #d5d5d5;
-    
+    font-size: .8em;
 }
 
 ul.posts { 
     margin: 40px auto 40px; 
-   
+    font-size: 1.5em;
 }
 
 ul.posts li {
